🛠️ refactor: 상품 조회 요청 dto 수정
- List.of로 변경하여 불변하게 전달

🔗 Resolves: #294